controls/tf-eks-best-practice/eks-vpc-endpoint-validation.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: eks-vpc-endpoint-validation
  annotations:
    policies.kyverno.io/title: EKS VPC Endpoint Validation
    policies.kyverno.io/category: EKS Best Practices
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Validates that EKS clusters are deployed in VPCs with required endpoints for secure communication.
spec:
  validationActions:
    - Deny
  evaluation:
    mode: JSON
    background:
      enabled: false
  matchConstraints:
    resourceRules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*"]
        operations: ["CREATE", "UPDATE"]
  matchConditions:
    - name: is-terraform-plan
      expression: "has(object.planned_values) && has(object.terraform_version)"
    - name: has-vpc-endpoint
      expression: |
        has(object.planned_values) && 
          (has(object.planned_values.root_module) && has(object.planned_values.root_module.resources) &&
           object.planned_values.root_module.resources.exists(r, r.type == 'aws_vpc_endpoint'))
  validations:
    - expression: |
        (
          (!has(object.planned_values.root_module.resources) ||
           object.planned_values.root_module.resources.filter(r, r.type == 'aws_vpc_endpoint').all(endpoint,
             has(endpoint.values.vpc_id) && endpoint.values.vpc_id != ''
           ))
        )
      message: "EKS clusters must be deployed in VPCs with required endpoints for secure communication."
